docs/4.21/updating/preparing_for_updates/updating-cluster-prepare.md
Before you update your OpenShift Container Platform cluster, complete the required administrative tasks and review best practices to minimize disruption and avoid update failures.

# Kubernetes API removals

There are no Kubernetes API removals in this release.

# The risk of conditional updates

Conditional updates are update targets flagged by the OpenShift Update Service (OSUS) as available but not recommended due to known risks that apply to your cluster.

The Cluster Version Operator (CVO) periodically queries the OSUS for the most recent data about update recommendations, and some potential update targets might have risks associated with them.

The CVO evaluates the conditional risks, and if the risks are not applicable to the cluster, then the target version is available as a recommended update path for the cluster. If the risk is determined to be applicable, or if for some reason CVO cannot evaluate the risk, then the update target is available to the cluster as a conditional update.

When you encounter a conditional update while you are trying to update to a target version, you must assess the risk of updating your cluster to that version. Generally, if you do not have a specific need to update to that target version, it is best to wait for a recommended update path from Red Hat.

However, if you have a strong reason to update to that version, for example, if you need to fix an important CVE, then the benefit of fixing the CVE might outweigh the risk of the update being problematic for your cluster. You can complete the following tasks to determine whether you agree with the Red Hat assessment of the update risk:

- Complete extensive testing in a non-production environment to the extent that you are comfortable completing the update in your production environment.

- Follow the links provided in the conditional update description, investigate the bug, and determine if it is likely to cause issues for your cluster. If you need help understanding the risk, contact Red Hat Support.

<!-- -->

- [Evaluation of update availability](../../updating/understanding_updates/how-updates-work.xml#update-evaluate-availability_how-updates-work)

# etcd backups before cluster updates

Create etcd backups before you update clusters to preserve your cluster state and to enable disaster recovery.

etcd backups record the state of your cluster and all of its resource objects. You can use backups to try to restore the state of a cluster when the cluster has become unrecoverable.

In the context of updates, you can attempt an etcd restoration of the cluster if an update introduced catastrophic conditions that cannot be fixed without reverting to the previous cluster version.

etcd restorations might be destructive and destabilizing to a running cluster, use them only as a last resort.

<div class="warning">

Due to their high consequences, etcd restorations are not intended to be used as a rollback solution. Rolling your cluster back to a previous version is not supported. If your update is failing to complete, contact Red Hat support.

</div>

There are several factors that affect the viability of an etcd restoration. For more information, see "Backing up etcd data" and "Restoring to an earlier cluster state".

- [Backing up etcd](../../backup_and_restore/control_plane_backup_and_restore/backing-up-etcd.xml#backup-etcd)

- [Restoring to an earlier cluster state](../../backup_and_restore/control_plane_backup_and_restore/disaster_recovery/scenario-2-restoring-cluster-state.xml#dr-restoring-cluster-state)

# Preparing for Gateway API management succession by the Ingress Operator

Prepare your cluster for Gateway API management succession by removing existing unsupported definitions and installing compliant resources. This ensures a seamless update to OpenShift Container Platform 4.19 and prevents conflicts with the Ingress Operator.

Starting in OpenShift Container Platform 4.19, the Ingress Operator manages the lifecycle of any Gateway API custom resource definitions (CRDs). This lifecycle control blocks you from creating, updating, or deleting CRDs within the `gateway.networking.k8s.io` API group.

<div class="note">

Starting in OpenShift Container Platform 4.22, deploying the Gateway API CRD `gateway.networking.x-k8s.io` is no longer restricted. You can deploy that CRD without interference from the Ingress Operator. Experimental Gateway API CRDs in the `gateway.networking.k8s.io` group remain restricted.

</div>

<div class="warning">

Updating or deleting Gateway API resources can result in downtime and loss of service or data. Be sure you understand how this will affect your cluster before performing the steps in this procedure. If necessary, back up any Gateway API objects in YAML format in order to restore it later.

</div>

- You have installed the OpenShift CLI (`oc`).

- You have access to an OpenShift Container Platform account with cluster administrator access.

- Optional: You have backed up any necessary Gateway API objects.

  <div class="warning">

  Backup and restore can fail or result in data loss for any CRD fields that were present in the old definitions but are absent in the new definitions.

  </div>

1.  List all the Gateway API CRDs that you need to remove by running the following command:

    ``` terminal
    $ oc get crd | grep -F -e gateway.networking.k8s.io -e gateway.networking.x-k8s.io
    ```

    <div class="formalpara-title">

    **Example output**

    </div>

    ``` terminal
    gatewayclasses.gateway.networking.k8s.io
    gateways.gateway.networking.k8s.io
    grpcroutes.gateway.networking.k8s.io
    httproutes.gateway.networking.k8s.io
    referencegrants.gateway.networking.k8s.io
    ```

2.  Delete the Gateway API CRDs from the previous step by running the following command:

    ``` terminal
    $ oc delete crd gatewayclasses.networking.k8s.io && \
    oc delete crd gateways.networking.k8s.io && \
    oc delete crd grpcroutes.gateway.networking.k8s.io && \
    oc delete crd httproutes.gateway.networking.k8s.io && \
    oc delete crd referencesgrants.gateway.networking.k8s.io
    ```

    <div class="important">

    Deleting CRDs removes every custom resource that relies on them and can result in data loss. Back up any necessary data before deleting the Gateway API CRDs. Any controller that was previously managing the lifecycle of the Gateway API CRDs will fail to operate properly. Attempting to force its use in conjunction with the Ingress Operator to manage Gateway API CRDs might prevent the cluster update from succeeding.

    </div>

3.  Get the supported Gateway API CRDs by running the following command:

    ``` terminal
    $ oc apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.2.1/standard-install.yaml
    ```

    <div class="warning">

    You can perform this step without deleting your CRDs. If your update to a CRD removes a field that is used by a custom resource, you can lose data. Updating a CRD a second time, to a version that re-adds a field, can cause any previously deleted data to reappear. Any third-party controller that depends on a specific Gateway API CRD version that is not supported in OpenShift Container Platform 4.17 will break upon updating that CRD to one supported by Red Hat.

    For more information on the OpenShift Container Platform implementation and the dead fields issue, see *Gateway API implementation for OpenShift Container Platform*.

    </div>

- [Gateway API implementation for OpenShift Container Platform](../../networking/ingress_load_balancing/configuring_ingress_cluster_traffic/ingress-gateway-api.xml#nw-ingress-gateway-api-implementation)

# Best practices for cluster updates

Follow best practices to ensure successful cluster updates. These best practices include selecting recommended versions, resolving critical alerts, maintaining spare node capacity, and properly configuring pod disruption budgets.

OpenShift Container Platform minimizes workload disruptions during an update. Updates do not begin unless the cluster is in an upgradeable state at the time of the update request.

This design enforces some key conditions before initiating an update, but there are several actions you can take to increase your chances of a successful cluster update.

## Choose versions recommended by the OpenShift Update Service

The OpenShift Update Service (OSUS) provides update recommendations based on cluster characteristics such as the cluster’s subscribed channel. The Cluster Version Operator saves these recommendations as either recommended or conditional updates.

While it is possible to attempt an update to a version that is not recommended by OSUS, following a recommended update path protects users from encountering known issues or unintended consequences on the cluster.

Choose only update targets that are recommended by OSUS to ensure a successful update.

## Address all critical alerts on the cluster

Critical alerts must always be addressed as soon as possible, but it is especially important to address these alerts and resolve any problems before initiating a cluster update.

Failing to address critical alerts before beginning an update can cause problematic conditions for the cluster.

In the **Administrator** perspective of the web console, navigate to **Observe** → **Alerting** to find critical alerts.

## Ensure that the cluster is in an Upgradeable state

When one or more Operators have not reported their `Upgradeable` condition as `True` for more than an hour, the `ClusterNotUpgradeable` warning alert is triggered in the cluster. In most cases this alert does not block patch updates, but you cannot perform a minor version update until you resolve this alert and all Operators report `Upgradeable` as `True`.

For more information about the `Upgradeable` condition, see "Understanding cluster Operator condition types" in the additional resources section.

## SDN support removal

OpenShift SDN network plugin was deprecated in versions 4.15 and 4.16. With this release, the SDN network plugin is no longer supported and the content has been removed from the documentation.

If your OpenShift Container Platform cluster is still using the OpenShift SDN CNI, see [Migrating from the OpenShift SDN network plugin](https://docs.redhat.com/en/documentation/openshift_container_platform/4.16/html/networking/ovn-kubernetes-network-plugin#migrate-from-openshift-sdn).

<div class="important">

It is not possible to update a cluster to OpenShift Container Platform 4.17 if it is using the OpenShift SDN network plugin. You must migrate to the OVN-Kubernetes plugin before upgrading to OpenShift Container Platform 4.17.

</div>

## Ensure that enough spare nodes are available

A cluster should not be running with little to no spare node capacity, especially when initiating a cluster update. Nodes that are not running and available may limit a cluster’s ability to perform an update with minimal disruption to cluster workloads.

Depending on the configured value of the cluster’s `maxUnavailable` spec, the cluster might not be able to apply machine configuration changes to nodes if there is an unavailable node. Additionally, if compute nodes do not have enough spare capacity, workloads might not be able to temporarily shift to another node while the first node is taken offline for an update.

Make sure that you have enough available nodes in each worker pool, as well as enough spare capacity on your compute nodes, to increase the chance of successful node updates.

<div class="warning">

The default setting for `maxUnavailable` is `1` for all the machine config pools in OpenShift Container Platform. It is recommended to not change this value and update one control plane node at a time. Do not change this value to `3` for the control plane pool.

</div>

## Ensure that the cluster’s PodDisruptionBudget is properly configured

You can use the `PodDisruptionBudget` object to define the minimum number or percentage of pod replicas that must be available at any given time. This configuration protects workloads from disruptions during maintenance tasks such as cluster updates.

However, it is possible to configure the `PodDisruptionBudget` for a given topology in a way that prevents nodes from being drained and updated during a cluster update.

When planning a cluster update, check the configuration of the `PodDisruptionBudget` object for the following factors:

- For highly available workloads, make sure there are replicas that can be temporarily taken offline without being prohibited by the `PodDisruptionBudget`.

- For workloads that are not highly available, make sure they are either not protected by a `PodDisruptionBudget` or have some alternative mechanism for draining these workloads eventually, such as periodic restart or guaranteed eventual termination.

<!-- -->

- [Understanding cluster Operator condition types](../../updating/understanding_updates/intro-to-updates.xml#understanding_clusteroperator_conditiontypes_understanding-openshift-updates)

# Minimizing worker node deployment time

You can minimize deployment time during cluster worker node installation by applying configuration changes across nodes simultaneously.

- You have access to the configuration file for your required installation method (`install-config.yaml` or similar).

- You have the OpenShift CLI (`oc`) installed.

- You have the OpenShift installation program (`openshift-install`) installed.

- You have access to the cluster as a user with the `cluster-admin` role.

- You create more than one worker Machine Configuration Pool (MCP) in the cluster.

1.  Create a MCP YAML file for each custom worker MCP that you intend to use, as in the following example:

    ``` yaml
    apiVersion: machineconfiguration.openshift.io/v1
    kind: MachineConfigPool
    metadata:
      name: worker-0
      labels:
        machineconfiguration.openshift.io/role: worker-0
    spec:
      machineConfigSelector:
        matchExpressions:
          - key: machineconfiguration.openshift.io/role
            operator: In
            values: [ worker, worker-0 ]
      paused: false
      maxUnavailable: 100%
      nodeSelector:
        matchLabels:
          node-role.kubernetes.io/worker-0: ""
    ```

    Ensure the following configurations are present:

    - **maxUnavailable**: Set this value to `100%`. This setting ensures that all nodes within this specific MCP update concurrently during the initial deployment. By default, `maxUnavailable` is set to 1, causing all nodes within this specific MCP to update sequentially during the initial deployment.

    - **nodeSelector**: Define a unique label, such as `node-role.kubernetes.io/worker-0`, to bind specific nodes to this pool.

    - **paused**: Set this value to `true` if you plan to apply additional Day 2 configurations, such as `PerformanceProfile`, after installation. All Day 2 configurations can be applied while the MCP is paused. They will be queued and applied when you unpause the node. Set this value to `false` if no further configurations are required.

      <div class="note">

      For bare-metal servers, the reboot time can take up to a couple of minutes.

      </div>

2.  Place the YAML files in the directory generated by the installation program. Ensure that your worker nodes get assigned the correct labels, such as `node-role.kubernetes.io/worker-0`, during the provisioning phase or immediately upon joining.

    <div class="note">

    Proper labeling ensures that the nodes get assigned to the correct custom MCP rather than the default worker pool.

    </div>

3.  Optional: If you set the `paused` parameter to `true` to apply additional configurations, complete the following steps:

    1.  Apply your Day 2 configuration.

    2.  Unpause the MCPs to start the configuration phase and reboot if needed. Clusters must be deployed to access the API and run `oc` commands:

        ``` terminal
        $ oc patch mcp/worker-0 --patch '{"spec":{"paused":false}}' --type=merge
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        machineconfigpool.machineconfiguration.openshift.io/worker-0 patched
        ```

        <div class="note">

        If you did not set the `paused` parameter to `true`, the configuration will apply sequentially and reboot if needed.

        </div>

4.  Verify that the MCPs updated successfully:

    ``` terminal
    $ oc get machineconfigpools
    ```

    <div class="formalpara-title">

    **Example output**

    </div>

    ``` terminal
    NAME       CONFIG                                           UPDATED   UPDATING   DEGRADED   MACHINECOUNT   READYMACHINECOUNT   UPDATEDMACHINECOUNT   DEGRADEDMACHINECOUNT   AGE
    master     rendered-master-b0bb90c4921860f2a5d8a2f8137c1867 True      False      False      3              3                   3                     0                      97m
    worker-0   rendered-worker-config-new                       False     True       False      10             0                   0                     0                      5m
    ```

5.  When all MCPs are set to `UPDATED=true`, update the MCPs with the appropriate `maxUnavailable` based on workload requirements. This ensures cluster stability and high availability when users deploy workloads onto the cluster. For example, set `maxUnavailable` to 1 by running the following command:

    ``` terminal
    $ oc patch mcp/worker-0 --patch '{"spec":{"maxUnavailable":1}}' --type=merge
    ```

    <div class="formalpara-title">

    **Example output**

    </div>

    ``` terminal
    machineconfigpool.machineconfiguration.openshift.io/worker-0 patched
    ```
